--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,9 @@
+container_commands:
+  01_collectstatic:
+    command: "source /opt/python/run/venv/bin/activate && python portfolio/manage.py collectstatic --noinput"
+
 option_settings:
-  aws:elasticbeanstalk:container:python:
+  "aws:elasticbeanstalk:container:python":
     WSGIPath: portfolio.wsgi:application
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "www/static/"
