Corrected aws env bug

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -5,5 +5,5 @@ container_commands:
 option_settings:
   "aws:elasticbeanstalk:container:python":
     WSGIPath: portfolio.wsgi:application
-  "aws:elasticbeanstalk:container:python:staticfiles":
+  "aws:elasticbeanstalk:environment:proxy:staticfiles":
     "/static/": "www/static/"
