--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,7 +3,7 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python portfolio/manage.py collectstatic --noinput"
 
 option_settings:
-  "aws:elasticbeanstalk:container:python":
+  aws:elasticbeanstalk:container:python:
     WSGIPath: portfolio.wsgi:application
-  "aws:elasticbeanstalk:environment:proxy:staticfiles":
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
     "/static/": "www/static/"
