--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,6 +2,6 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: portfolio.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    "/static/": "www/static/"
+    "/static/": "static/"
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: portfolio.settings
