--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,38 @@
 asgiref==3.2.10
+awsebcli==3.18.1
+botocore==1.15.49
+cement==2.8.2
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.8
+django-heroku==0.3.1
+docutils==0.15.2
+future==0.16.0
+idna==2.7
+jmespath==0.10.0
 joblib==0.16.0
 numpy==1.19.0
 pandas==1.0.5
-python-dateutil==2.8.1
+pathspec==0.5.9
+psycopg2==2.8.5
+pypiwin32==223
+python-dateutil==2.8.0
 pytz==2020.1
+pywin32==228
+PyYAML==5.3.1
+requests==2.20.1
 scikit-learn==0.23.1
 scipy==1.5.0
-six==1.15.0
+semantic-version==2.5.0
+six==1.11.0
 sklearn==0.0
 sqlparse==0.3.1
+termcolor==1.1.0
 threadpoolctl==2.1.0
+urllib3==1.24.3
 utility==1.0
+wcwidth==0.1.9
+whitenoise==5.1.0
 xgboost==0.90
