--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==3.0.8
 django-heroku==0.3.1
 docutils==0.15.2
 future==0.16.0
+gunicorn==20.0.4
 idna==2.7
 jmespath==0.10.0
 joblib==0.16.0
@@ -17,8 +18,10 @@ numpy==1.19.0
 pandas==1.0.5
 pathspec==0.5.9
 psycopg2==2.8.5
+pypiwin32==223
 python-dateutil==2.8.0
 pytz==2020.1
+pywin32==228
 PyYAML==5.3.1
 requests==2.20.1
 scikit-learn==0.23.1
